--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <div class="searchBox">
-            <h2>Search for your town:</h2>
+            <h2>Найдите Любой Город:</h2>
             <input id="cityInput" class="countrySelect" type="text" placeholder="Enter city name">
             <button id="searchButton" class="countrySelect" type="button">Search</button>
         </div>
